# quotations_engine

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: lib.rs
src/model/: engine.rs  group_rule.rs  mod.rs  package.rs  price.rs  product.rs  product_rule.rs  purchasable.rs  quotation.rs  rule.rs  unit.rs  validator.rs  validators.rs
src/rules/: max_price.rs  max_quantity.rs  min_price.rs  min_quantity.rs  mod.rs  rule.rs
src/utils/: mock.rs
