[package]
name = "quotations_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "quotations_engine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
